# lucaaurelia.com

./: .gitignore  Cargo.toml  readme.md
assets/built/: browser.js  browser_bg.wasm  built.css  haiku-2024.md  manifest.json
assets/macro/: Cargo.toml  profile.json  tailwind.config.js
assets/macro/src/: browser_crate.rs  cache.rs  caching.rs  detect_file_changes.rs  file.rs  file_change.rs  font.rs  lib.rs  parse_macro_arguments.rs  public_obsidian_pages.rs  tailwind.rs  test.rs
assets/macro/src/images/: build_time_image.rs  build_time_resized_image.rs  image_asset_extension.rs  include_image_input.rs  include_images_in_folder_input.rs  mod.rs
assets/runtime/: Cargo.toml
assets/runtime/src/: browser_crate_asset.rs  css_asset.rs  file_asset.rs  font_asset.rs  image_asset.rs  js_asset.rs  lib.rs  wasm_asset.rs
browser/src/: lib.rs
built/: index.html
built/built-assets/: browser.js  browser_bg.wasm  built.css
built/not-found/: index.html
built/santoka/: index.html
built/santoka/all/: index.html
built/santoka/publications/0/non-preview-poems/: index.html
built/santoka/publications/11/non-preview-poems/: index.html
built/santoka/publications/12/non-preview-poems/: index.html
built/santoka/publications/13/non-preview-poems/: index.html
built/santoka/publications/14/non-preview-poems/: index.html
built/santoka/publications/15/non-preview-poems/: index.html
built/santoka/publications/16/non-preview-poems/: index.html
built/santoka/publications/17/non-preview-poems/: index.html
built/works/a-hill-of-seven-colors/: index.html
built/works/digging-up-night-from-the-garden/: index.html
built/works/evening-cracking-like-an-egg/: index.html
built/works/glen-of-the-birches/: index.html
built/works/green-like-no-grass-is-green/: index.html
built/works/into-my-bedroom-quietness-a-bird-is-shouting/: index.html
built/works/metal-tendons-of-mountains-metal-skins-of-lakes/: index.html
built/works/most-light-speaks-sunish/: index.html
built/works/my-eyes-upon-the-sun-upon-my-face/: index.html
built/works/quiet-and-watching-the-clouds-flock/: index.html
built/works/taking-a-breath-from-the-night-sky/: index.html
built/works/the-sun-not-setting-turned-to-moss/: index.html
built/works/three-dimensions-of-birdsong/: index.html
built/works/throwing-sound-into-the-valley/: index.html
built/works/walking-the-grounds-of-koya-mountain/: index.html
built/works/walls-fall/: index.html
built/works/when-sun-and-dirt/: index.html
library_of_babel/: Cargo.toml
library_of_babel/src/: lib.rs  main.rs
library_of_babel/src/leaflet/: metadata.rs
library_of_babel/src/obsidian/: compile_checked_pages.rs  file.rs  image.rs  link.rs  mod.rs  page.rs  tag.rs  vault.rs  vault_item.rs
library_of_babel/src/sunful/: document.rs  line.rs  metadata.rs  mod.rs  paragraph.rs  parse_error.rs  raw_section.rs  schema.rs  section.rs  section_metadata.rs
library_of_babel/src/years/year_2023/: mod.rs
library_of_babel/src/years/year_2024/: mod.rs
onion/: Cargo.toml
onion/src/: account_name.rs  institution.rs  main.rs  personal_or_business.rs  predictability.rs  standard_transaction.rs  tiller_transaction.rs
onion/src/crate_wrappers/: jiff.rs  mod.rs
paths/: Cargo.toml
paths/src/: lib.rs
paths/src/crate_wrappers/: path.rs
run_binary/: Cargo.toml
run_binary/src/: lib.rs
santoka/: Cargo.toml  poems.json  publications.json  readme.md  translators.json
santoka/src/: dataset.rs  lib.rs  poem.rs  publication.rs  translator.rs
search/: export_onnx.py  inference.py  onnx_inference.py  pyproject.toml
server/: Cargo.toml
server/src/: main.rs
server/src/assets/: main.css  main.js  mod.rs
server/src/assets/processed_2023_haiku/: processed_2023_haiku.csv
server/src/components/: color_blocks.rs  hero_content.rs  hero_section.rs  image.rs  layout.rs  light_dark_image.rs  link.rs  logo.rs  mod.rs  nav.rs  nav_logo.rs  work_page.rs
server/src/extensions/: mod.rs  str.rs
server/src/middleware/: mod.rs
server/src/routes/: mod.rs  route.rs
server/src/routes/image_garden/: mod.rs
server/src/routes/not_found/: mod.rs
server/src/routes/robots_txt/: mod.rs
server/src/routes/santoka/: mod.rs
server/src/routes/santoka/all/: mod.rs
server/src/routes/santoka/non_preview_poems/: mod.rs
server/src/routes/work/: mod.rs
server/src/routes/works/: mod.rs
server/src/routes/works/a_hill_of_seven_colors/: mod.rs
server/src/routes/works/digging_up_night_from_the_garden/: mod.rs
server/src/routes/works/evening_cracking_like_an_egg/: mod.rs
server/src/routes/works/glen_of_the_birches/: mod.rs
server/src/routes/works/green_like_no_grass_is_green/: mod.rs
server/src/routes/works/into_my_bedroom_quietness_a_bird_is_shouting/: mod.rs
server/src/routes/works/metal_tendons_of_mountains_metal_skins_of_lakes/: mod.rs
server/src/routes/works/most_light_speaks_sunish/: mod.rs
server/src/routes/works/my_eyes_upon_the_sun_upon_my_face/: mod.rs
server/src/routes/works/quiet_and_watching_the_clouds_flock/: mod.rs
server/src/routes/works/santoka/: mod.rs
server/src/routes/works/taking_a_breath_from_the_night_sky/: mod.rs
server/src/routes/works/the_sun_not_setting_turned_to_moss/: mod.rs
server/src/routes/works/three_dimensions_of_birdsong/: mod.rs
server/src/routes/works/throwing_sound_into_the_valley/: mod.rs
server/src/routes/works/walking_the_grounds_of_koya_mountain/: mod.rs
server/src/routes/works/walls_fall/: mod.rs
server/src/routes/works/when_sun_and_dirt/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  route.rs  work.rs  work_id.rs
shared/src/controllers/: mod.rs  parallax.rs  replace.rs  show_hide.rs  show_if_scrolled.rs
shared/src/extensions/browser/: document.rs  element.rs  mod.rs  window.rs
shared/src/santoka_haiku_2023_06_26/: mod.rs  santoka_haiku_2023_06_26.json
shuttle-example/: Cargo.toml
tailwind_cli/: Cargo.toml
tailwind_cli/src/: lib.rs
wasm_pack_cli/: Cargo.toml  readme.md
wasm_pack_cli/src/: lib.rs
wasm_pack_cli/test-crate/: Cargo.toml
(+10 files in other folders)
