[package]
name = "run_binary"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Save binary bytes to a file and execute that file."
readme = "readme.md"
keywords = ["cli"]
categories = [
    "api-bindings",
    "development-tools",
    "development-tools::build-utils",
    "web-programming",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.7"
include-cargo-toml = "0.1.0"
