[package]
name = "santoka"
version = "1.0.1"
edition = "2021"
description = "Translations of 668 of Taneda Santoka's free-verse haiku"
readme = "readme.md"
homepage = "https://lucaaurelia.com/santoka"
repository = "https://github.com/luca-aurelia/lucaaurelia.com/tree/main/santoka"
license = "MIT"
keywords = ["dataset", "literature", "poetry", "japan", "haiku"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
