[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Serverless functions for this project for handling back end logic."
license = "unlicensed"
repository = "https://github.com/rainsound-ai/rainsound.ai/"

[dependencies]
paths = { path = "../paths" }
shared = { path = "../shared", features = ["server"] }
assets = { path = "../assets/mod" }
library_of_babel = { path = "../library_of_babel" }
santoka = { path = "../santoka" }
maud = "0.26.0"
build-time = "0.1.3"
once_cell = "1.18.0"
chrono = "0.4.31"
jiff = "0.1.4"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "compression-full"] }
serde = "1.0.195"
csv = "1.3.0"
nanorand = "0.7.0"
solar-calendar-events = "0.1.4"
time = "0.3.34"
number_to_words = "0.1.1"

[profile.dev.package."*"]
opt-level = 3
debug = false
